<resources>
    <string name="app_name">A guessing game</string>
    <string name="hello_world">hello world</string>

    <string name="welcome">Welcome</string>
    <string name="description"> This is my first app. You can use it to play a guessing game.</string>
    <string name="instruction">Enter a number from 0 to 1000 here.</string>
    <string name="action_settings">Settings</string>
    <string name="confirmation_button">"Let's see.."</string>
    <string name="replay">I want to try a new number</string>

    <string name="title_activity_check">"Let's see if you're correct&#8230;"</string>
    <string name="goBack">Go Back</string>
</resources>
