<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeScreen"
    android:id="@+id/relativeLayout">

    <TextView android:text="@string/welcome" android:layout_width="wrap_content"
        android:background="#000000"
        android:textColor="#FF0000"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/description"
        android:id="@+id/description"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/welcome"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:ems="10"
        android:id="@+id/numberField"
        android:hint="@string/instruction"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:textColor="#00AAAA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_button"
        android:id="@+id/sendButton"
        android:onClick="onClickCheck"
        android:layout_below="@+id/numberField"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replay"
        android:onClick="onClickReplay"
        android:id="@+id/replayButton"
        android:layout_below="@+id/sendButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />

</RelativeLayout>
